# pixie

./: .gitignore  Cargo.toml  pixie.sublime-workspace
src/: canvas.rs  lib.rs  main.rs  pipeline.rs  simulation.rs  window.rs
src/shaders/: blur.wgsl  combine.wgsl  cut.wgsl  hdr.wgsl  mix.wgsl  split_bright.wgsl  vert.wgsl
