[package]
name = "pixie"
version = "0.1.0"
authors = ["AnonymousDapper"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
pixels = { path = "pixels" }
winit = { version = "0.26.1", default-features = false, features = ["x11"] }
winit_input_helper = "0.11.0"

half = "1.8.2"
glam = { version = "0.20.2", features = ["serde"] }

bytemuck = "1.7.3"
line_drawing = "1.0.0"

toml = "0.5"
serde = { version = "1.0", features = ["derive"] }